--- a/capstone_react/cap-react/public/index.html
+++ b/capstone_react/cap-react/public/index.html
@@ -26,6 +26,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-image: url('https://www.teahub.io/photos/full/313-3136878_high-resolution-patriotic-background.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: auto;
+      color: white;
+    }
+  </style>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
