--- a/capstone_react/cap-react/public/index.html
+++ b/capstone_react/cap-react/public/index.html
@@ -43,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>The Places You'll Go</title>
 </head>
 
 <body>
